--- a/Hockey/clasificacion_completo.ipynb
+++ b/Hockey/clasificacion_completo.ipynb
@@ -584,9 +584,7 @@
     "    dataframes[idx] = dataframe_con_datos_temporada\n",
     "\n",
     "    \n",
-    "datos_partidos = pd.concat(dataframes)\n",
-    "\n",
-    "##NO PILLA LOS ULTIMOS DATOS DE TODAS LAS LIGAS"
+    "datos_partidos = pd.concat(dataframes)"
    ]
   },
   {
