--- a/Tenis/clasificacion_completo.ipynb
+++ b/Tenis/clasificacion_completo.ipynb
@@ -646,10 +646,7 @@
     "    \n",
     "datos_partidos = pd.concat(dataframes)\n",
     "    \n",
-    "print(dict_ultimo_gol_average_ultimos_5_equipo)\n",
-    "print(len(dict_ultimo_gol_average_ultimos_5_equipo))\n",
-    "\n",
-    "##NO PILLA LOS ULTIMOS DATOS DE TODAS LAS LIGAS"
+    "print(len(dict_ultimo_gol_average_ultimos_5_equipo))"
    ]
   },
   {
